# ha-maison-protegee2

./: .gitignore  CODEOWNERS  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
custom_components/maison_protegee/: __init__.py  alarm_control_panel.py  api.py  binary_sensor.py  bootstrap.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/maison_protegee/lib/maison_protegee/: __init__.py  cli.py  exceptions.py
maison_protegee/: __init__.py  client.py  models.py
maison_protegee/proto/: erable.proto
reverse/: NOTES.md  manifest.json
scripts/: generate_proto.sh  sync_ha_lib.sh
